--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tanstack/react-router": "^1.82.1",
+    "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.81.0"
