--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tanstack/react-router": "^1.82.1",
+    "dompurify": "^3.2.2",
+    "html-react-parser": "^5.2.0",
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
