--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "sass": "^1.81.0"
   },
   "devDependencies": {
